# PlaneMCP

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/planemcp/: main.py
